--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from langchain_core.pydantic_v1 import BaseModel, Field\n",
     "from langchain_core.output_parsers import JsonOutputParser\n",
+    "from langchain_core.runnables import RunnablePassthrough, RunnableLambda\n",
     "\n",
     "from pymongo.mongo_client import MongoClient\n",
     "from typing import Optional\n",
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +56,72 @@
     "    openai_api_version=\"2024-03-01-preview\",\n",
     "    temperature=0.1,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_report():\n",
+    "    with open(\"emergency_details.json\", \"r\") as file:\n",
+    "        emergency_details = json.load(file)\n",
+    "    \n",
+    "    details = \"\\n\".join([f\"- '{key}': {value}\" for key, value in emergency_details.items()])\n",
+    "    \n",
+    "    prompt = ChatPromptTemplate.from_messages(\n",
+    "        [\n",
+    "            (\n",
+    "                \"system\",\n",
+    "                \"\"\"\n",
+    "                You will read in the emergency_details.json.\n",
+    "                Details:\n",
+    "                {details}\n",
+    "                There are 8 fields in the JSON file.\n",
+    "                - 'name': The name of the person.\n",
+    "                - 'appearance': A description of the person's appearance.\n",
+    "                - 'address': The address where assistance is needed.\n",
+    "                - 'situation': A detailed description of the situation facing the person, written in third person.\n",
+    "                - 'latitude': The latitude of the address mentioned above.\n",
+    "                - 'longitude': The longitude of the address mentioned above.\n",
+    "                - 'classify': The level of severity of the address. There are four levels: destroyed, major-damage, minor-damage and no-damage.\n",
+    "                - 'destroyed': The percentage of destruction in the surrounding area. The higher the percentage, the more severe the damage.\n",
+    "                According to the information above, please write a message in detail to the emergency services to inform them of the situation.\n",
+    "                \"\"\"\n",
+    "            ),\n",
+    "            (\"human\", \"\"),\n",
+    "        ]\n",
+    "    )\n",
+    "    chain = (\n",
+    "        {\n",
+    "            \"details\": RunnablePassthrough()\n",
+    "        }\n",
+    "        | prompt\n",
+    "        | llm\n",
+    "    )\n",
+    "    response = chain.invoke(details)\n",
+    "    return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content=\"Subject: Urgent Assistance Required at 2402 Wisconsin Ave, Joplin, MO\\n\\nDear Emergency Services,\\n\\nI am writing to report a critical situation that requires immediate attention at the following location:\\n\\nAddress: 2402 Wisconsin Ave, Joplin, MO 64804\\nLatitude: 37.0640558\\nLongitude: -94.50263369999999\\n\\nThe area has been classified as 'destroyed' with a reported 62.80% of the surrounding structures and infrastructure severely damaged due to the joplin-tornado incident. This level of destruction indicates that the location is likely to be in a state of considerable disarray, with potential risks to any remaining occupants and a pressing need for search and rescue operations.\\n\\nAs of now, we do not have specific details about the individuals involved or the exact nature of their situation, as the 'name' and 'situation' fields in the report are empty. There is also no description of the person's appearance under 'appearance'. Despite the lack of these details, the high percentage of destruction necessitates a rapid response to ensure the safety of any potential survivors and to assess the stability of the remaining structures.\\n\\nGiven the severity of the damage, we urge you to dispatch search and rescue teams to the coordinates provided to conduct a thorough search of the area. It is imperative to locate and assist any individuals who may be trapped or injured due to the tornado's impact.\\n\\nPlease prioritize this location for emergency response, and consider sending additional resources such as medical aid, structural engineers, and support for potential displacement of residents.\\n\\nWe appreciate your prompt attention to this urgent matter and stand ready to provide any further information that may become available.\\n\\nSincerely,\\n[Your Name]\\n[Your Contact Information]\\n[Your Affiliation or Organization, if applicable]\", response_metadata={'token_usage': {'completion_tokens': 362, 'prompt_tokens': 290, 'total_tokens': 652}, 'model_name': 'gpt-4', 'system_fingerprint': 'fp_2f57f81c11', 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {}}], 'finish_reason': 'stop', 'logprobs': None, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}, id='run-635ae6b7-eab9-4739-b2ee-be854690ede8-0')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_report()"
    ]
   },
   {
