--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,16 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_report():\n",
     "    with open(\"emergency_details.json\", \"r\") as file:\n",
     "        emergency_details = json.load(file)\n",
-    "    \n",
-    "    details = \"\\n\".join([f\"- '{key}': {value}\" for key, value in emergency_details.items()])\n",
-    "    \n",
+    "\n",
+    "    details = \"\\n\".join(\n",
+    "        [f\"- '{key}': {value}\" for key, value in emergency_details.items()]\n",
+    "    )\n",
+    "\n",
     "    prompt = ChatPromptTemplate.from_messages(\n",
     "        [\n",
     "            (\n",
@@ -78,50 +80,59 @@
     "                You will read in the emergency_details.json.\n",
     "                Details:\n",
     "                {details}\n",
-    "                There are 8 fields in the JSON file.\n",
+    "                The JSON file contains 8 fields:\n",
     "                - 'name': The name of the person.\n",
     "                - 'appearance': A description of the person's appearance.\n",
     "                - 'address': The address where assistance is needed.\n",
     "                - 'situation': A detailed description of the situation facing the person, written in third person.\n",
     "                - 'latitude': The latitude of the address mentioned above.\n",
     "                - 'longitude': The longitude of the address mentioned above.\n",
-    "                - 'classify': The level of severity of the address. There are four levels: destroyed, major-damage, minor-damage and no-damage.\n",
+    "                - 'classify': The level of severity of the address. There are four levels: destroyed, major-damage, minor-damage, and no-damage.\n",
     "                - 'destroyed': The percentage of destruction in the surrounding area. The higher the percentage, the more severe the damage.\n",
-    "                According to the information above, please write a message in detail to the emergency services to inform them of the situation.\n",
-    "                \"\"\"\n",
+    "\n",
+    "                Based on the provided details:\n",
+    "                - Summarize the situation including the name and address of the individual and what they are facing, along with a mention that a tornado has passed by.\n",
+    "                - Assess the emergency level without reasoning in the output; just provide the number, using the following simplified criteria:\n",
+    "                    * Level 1: The individual is in imminent danger, requires immediate evacuation or life-saving interventions.\n",
+    "                    * Level 2: The individual is at high risk, such as being trapped or having serious injuries that do not yet require immediate life-saving actions.\n",
+    "                    * Level 3: The individual is in a potentially hazardous situation that could worsen, needing prompt attention.\n",
+    "                    * Level 4: The individual needs assistance but is not in immediate danger; the situation is stable enough to allow for planned intervention.\n",
+    "                    * Level 5: The situation is controlled; the individual needs minimal or routine assistance.\n",
+    "                    If the 'situation' description is insufficient or missing, assign 'Not Known' as the danger level.\n",
+    "                \n",
+    "                - Conclude with a statement on whether the message will be forwarded to the rescue team, based solely on the assessed level.\n",
+    "                - Ensure each of these parts is separated by a line break to enhance readability and present the information in a single, well-organized paragraph without using list or numbering format.\n",
+    "\n",
+    "                Do not include any numbers or detailed reasoning for the emergency level in the output.\n",
+    "                \"\"\",\n",
     "            ),\n",
     "            (\"human\", \"\"),\n",
     "        ]\n",
     "    )\n",
-    "    chain = (\n",
-    "        {\n",
-    "            \"details\": RunnablePassthrough()\n",
-    "        }\n",
-    "        | prompt\n",
-    "        | llm\n",
-    "    )\n",
+    "    chain = {\"details\": RunnablePassthrough()} | prompt | llm\n",
     "    response = chain.invoke(details)\n",
-    "    return response"
+    "    return response.content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "AIMessage(content=\"Subject: Urgent Assistance Required at 2402 Wisconsin Ave, Joplin, MO\\n\\nDear Emergency Services,\\n\\nI am writing to report a critical situation that requires immediate attention at the following location:\\n\\nAddress: 2402 Wisconsin Ave, Joplin, MO 64804\\nLatitude: 37.0640558\\nLongitude: -94.50263369999999\\n\\nThe area has been classified as 'destroyed' with a reported 62.80% of the surrounding structures and infrastructure severely damaged due to the joplin-tornado incident. This level of destruction indicates that the location is likely to be in a state of considerable disarray, with potential risks to any remaining occupants and a pressing need for search and rescue operations.\\n\\nAs of now, we do not have specific details about the individuals involved or the exact nature of their situation, as the 'name' and 'situation' fields in the report are empty. There is also no description of the person's appearance under 'appearance'. Despite the lack of these details, the high percentage of destruction necessitates a rapid response to ensure the safety of any potential survivors and to assess the stability of the remaining structures.\\n\\nGiven the severity of the damage, we urge you to dispatch search and rescue teams to the coordinates provided to conduct a thorough search of the area. It is imperative to locate and assist any individuals who may be trapped or injured due to the tornado's impact.\\n\\nPlease prioritize this location for emergency response, and consider sending additional resources such as medical aid, structural engineers, and support for potential displacement of residents.\\n\\nWe appreciate your prompt attention to this urgent matter and stand ready to provide any further information that may become available.\\n\\nSincerely,\\n[Your Name]\\n[Your Contact Information]\\n[Your Affiliation or Organization, if applicable]\", response_metadata={'token_usage': {'completion_tokens': 362, 'prompt_tokens': 290, 'total_tokens': 652}, 'model_name': 'gpt-4', 'system_fingerprint': 'fp_2f57f81c11', 'prompt_filter_results': [{'prompt_index': 0, 'content_filter_results': {}}], 'finish_reason': 'stop', 'logprobs': None, 'content_filter_results': {'hate': {'filtered': False, 'severity': 'safe'}, 'self_harm': {'filtered': False, 'severity': 'safe'}, 'sexual': {'filtered': False, 'severity': 'safe'}, 'violence': {'filtered': False, 'severity': 'safe'}}}, id='run-635ae6b7-eab9-4739-b2ee-be854690ede8-0')"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John, located at 1209 Little Ct, Joplin, MO 64804, is currently inside a building and requires assistance to get out following the passage of a tornado. The surrounding area has been classified as having no damage, but there is a reported 62.80% destruction in the vicinity.\n",
+      "\n",
+      "The emergency level for John's situation is assessed as Level 4.\n",
+      "\n",
+      "Based on the assessed level, the message will be forwarded to the rescue team to ensure John receives the necessary assistance in a timely but non-immediate manner.\n"
+     ]
     }
    ],
    "source": [
-    "get_report()"
+    "print(get_report())"
    ]
   },
   {
